--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "Hatio Lab. <heartyoh@hatiolab.com>"
   ],
-  "description": "input field for number type value with formatting",
+  "description": "필드에 숫자 형식의 값을 넣어 정의한 설정에 따라서 포맷함",
   "main": "things-number-field.html",
   "license": "http://polymer.github.io/LICENSE.txt",
   "homepage": "https://github.com/ThingsElements/things-number-field/",
