--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "polymer": "Polymer/polymer#^1.4.0",
     "numeral": "^2.0.4",
     "iron-input": "^1.0.10",
-    "iron-form-element-behavior": "^1.0.6"
+    "iron-form-element-behavior": "^1.0.6",
+    "things-libraries": "ThingsElements/things-libraries#^0.1.4"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
