bower.json License정보정리

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "things-number-field",
-  "version": "2.2.0",
+  "version": "v2.2.0",
   "authors": [
     "Hatio Lab. <heartyoh@hatiolab.com>"
   ],
